--- a/style/style.css
+++ b/style/style.css
@@ -4,6 +4,10 @@ html, body {
 }
 #c {
     width: 100%;
-    height: 100%;
+    /* height: 100%; */
+    max-height: 80vh;
     display: block;
+}
+.controls {
+
 }
