--- a/style/style.css
+++ b/style/style.css
@@ -2,12 +2,13 @@ html, body {
     margin: 0;
     height: 100%;
 }
+
+.game-controls {
+    padding: 10px;
+}
+
 #c {
     width: 100%;
-    /* height: 100%; */
     max-height: 80vh;
     display: block;
-}
-.controls {
-
 }
