--- a/style/style.css
+++ b/style/style.css
@@ -288,10 +288,11 @@ body {
     border: none;
     outline-width: 0;
     caret-color: #8db4dd;
-    width: 200px;
+    /* width: 200px; */
     font-family: 'Rocketrinder';
     line-height: 1.8;
     font-size: 1em;
+    background: inherit;
 }
 
 .wave-animate {
