Play-again button animation

--- a/style/style.css
+++ b/style/style.css
@@ -308,6 +308,18 @@ body {
     cursor: pointer;
 }
 
+.play-again-button {
+    border: 3px solid #8db3dd;
+    margin: 1px 7px 1px 7px;
+    color: #f0b22c;
+    -webkit-text-fill-color: #f0b22c;
+    /* border-radius: 10px; */
+    font-size: 17px;
+    background: unset;
+    /* background: #000; */
+    cursor: pointer;
+}
+
 .wave-animate-background {
     background: linear-gradient(15deg,rgb(224, 239, 255),rgb(191, 205, 255),#7f85ee, #3c47ff, #a0aeff, rgb(224, 239, 255));
     background-size: auto;
@@ -333,6 +345,54 @@ body {
     -webkit-animation: backgroundwave 3.5s ease infinite;
     -moz-animation: backgroundwave 3.5s ease infinite;
     animation: backgroundwave 3.5s linear infinite;
+}
+
+.button-glow {
+    border: none;
+    outline: none;
+    position: relative;
+    z-index: 0;
+    border-radius: 10px;
+
+    color: #000;
+}
+
+.button-glow:before {
+    content: '';
+    background: linear-gradient(45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000);
+    position: absolute;
+    top: -2px;
+    left:-2px;
+    background-size: 400%;
+    z-index: -1;
+    filter: blur(5px);
+    width: calc(100% + 4px);
+    height: calc(100% + 4px);
+    animation: glowing 20s linear infinite;
+    /* opacity: 0; */
+    opacity: 1;
+    transition: opacity .3s ease-in-out;
+    border-radius: 10px;
+}
+
+.button-glow:after {
+    background: transparent;
+
+    z-index: -1;
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #111;
+    left: 0;
+    top: 0;
+    border-radius: 10px;
+}
+
+@keyframes glowing {
+    0% { background-position: 0 0; }
+    50% { background-position: 400% 0; }
+    100% { background-position: 0 0; }
 }
 
 
