--- a/style/style.css
+++ b/style/style.css
@@ -228,7 +228,7 @@ body {
   } */
 
 .track-list li.selected .hiscore-list-container {
-    background: #299eb099;
+    background: #299eb0e0;
     flex: 1;
     border-radius: 20px;
 }
@@ -352,7 +352,8 @@ body {
     outline: none;
     position: relative;
     z-index: 0;
-    border-radius: 10px;
+    /* border-radius: 10px; */
+    transform: skew(-15deg);
 
     color: #000;
 }
@@ -372,7 +373,8 @@ body {
     /* opacity: 0; */
     opacity: 1;
     transition: opacity .3s ease-in-out;
-    border-radius: 10px;
+    /* border-radius: 10px; */
+    transform: skew(-15deg);
 }
 
 .button-glow:hover:before {
@@ -393,7 +395,8 @@ body {
     background: #111;
     left: 0;
     top: 0;
-    border-radius: 10px;
+    /* border-radius: 10px; */
+    transform: skew(-15deg);
 }
 
 @keyframes glowing {
